# qbittorrent-auto-tagger

./: .python-version  Makefile  README.md  build.spec  main.py  pyproject.toml  qbittorrent-auto-tagger.code-workspace  requirements.txt  tags.example.yml
.github/workflows/: release-on-version-bump.yml
src/qbittorrent_auto_tagger/: main.py
